--- a/platform_code/home/templates/home/about.html
+++ b/platform_code/home/templates/home/about.html
@@ -7,21 +7,21 @@
 
 <!--TODO not used for now, if it won't be later, to delete-->
 
-<h1 class="h1-margin-no-breadcrumbs">A propos de Substra Foundation</h1>
+<h1 class="h1-margin-no-breadcrumbs">A propos de Labelia Labs</h1>
 
 <div class="static-wrapper">
-    <p>Substra Foundation est une organisation à but non lucratif indépendante, dédiée à l’exploration d’approches de la
+    <p>Labelia Labs est une organisation à but non lucratif indépendante, dédiée à l’exploration d’approches de la
         data science sûres, responsables et protectrices des données sensibles, et au <strong>développement
             d’écosystèmes de data science de confiance</strong>. Elle travaille en particulier sur les collaborations
-        multi-partenaires en data science. Elle promeut, contribue et anime le projet open source Substra qui permet
+        multi-partenaires en data science. Elle promeut, contribue et anime le projet open source Labelia qui permet
         l'orchestration décentralisée, sécurisée, et traçable de tâches de machine learning dans un cadre protecteur de
         la confidentialité des données. Elle se donne pour objectif de :</p>
     <ul>
-        <li class="li-with-disc">Collecter des retours sur l’usage de Substra</li>
+        <li class="li-with-disc">Collecter des retours sur l’usage de Labelia</li>
         <li class="li-with-disc">Synthétiser les suggestions d’évolutions et proposer une roadmap commune de
             développement
         </li>
-        <li class="li-with-disc">Héberger les dépôts Github de Substra</li>
+        <li class="li-with-disc">Héberger les dépôts Github de Labelia</li>
         <li class="li-with-disc">Animer des groupes de travail sur les collaborations multi-partenaires en data
             science
         </li>
@@ -30,13 +30,13 @@
         </li>
     </ul>
 
-    <p>Le premier contributeur et partenaire-clef de Substra Foundation est <a href="https://owkin.com/"
+    <p>Le premier contributeur et partenaire-clef de Labelia Labs est <a href="https://owkin.com/"
                                                                                target="_blank">Owkin</a>, une start-up
         spécialisée en machine learning dans le domaine médical, qui dédie une équipe technique au développement de la
-        première version de Substra Framework.</p>
+        première version de Labelia Framework.</p>
 
-    <p>Substra Foundation se donne notamment pour objectif de fédérer et animer une communauté active de contributeurs
-        et d'utilisateurs du framework Substra.</p>
+    <p>Labelia Labs se donne notamment pour objectif de fédérer et animer une communauté active de contributeurs
+        et d'utilisateurs du framework Labelia.</p>
 
     <h3 class="about-subtitle">Pourquoi ?</h3>
 
@@ -48,12 +48,12 @@
         pour combler le "manque à savoir" dans de nombreuses disciplines, tout en assurant un haut niveau de protection
         aux données personnelles ou sensibles, et en garantissant la qualité et la transparence des travaux de data
         science. Défi immense et passionnant !</p>
-    <p>Le framework open source Substra s'inscrit dans ce mouvement de conjugaison des 2 tendances décrites, en
+    <p>Le framework open source Labelia s'inscrit dans ce mouvement de conjugaison des 2 tendances décrites, en
         permettant d'<strong>orchestrer de manière sécurisée et transparente des projets de data science entre plusieurs
             partenaires</strong>. Il est compatible avec des architectures décentralisées où les données restent locales
         et ne sont jamais transmises.<br>
         C'est une petite pièce du problème, mais qui ouvre déjà des cas d'usage prometteur (<a
-                href="https://www.substra.ai/fr/melloddy-project" target="_blank">coopération entre compétiteurs</a> par
+                href="https://www.labelia.org/fr/melloddy-project" target="_blank">coopération entre compétiteurs</a> par
         exemple). Un enjeu est aussi de favoriser la complémentarité et la compatibilité avec les techniques et outils
         dites 'privacy-enhancing' (e.g. differential privacy, SMPC, FHE...) sur lesquels la communauté travaille.</p>
     <img alt="image" class="centered-image middle-width" src="{% static 'image/Illustration_1.png' %}">
@@ -77,11 +77,11 @@
         <div class="column">
             <img alt="image" class="centered-image middle-width"
                  src="{% static 'image/Pictos_Substra_Vert_RVB_Application.png' %}">
-            <p class="text-center"><strong>Initiative open source Substra Framework</strong></p>
-            <p>Notre rôle est de promouvoir, contribuer et animer le projet open source Substra. Substra est un
+            <p class="text-center"><strong>Initiative open source Labelia Framework</strong></p>
+            <p>Notre rôle est de promouvoir, contribuer et animer le projet open source Labelia. Labelia est un
                 framework pour l’orchestration sécurisée, traçable et décentralisée de tâches de ML. Il est basé sur
                 Hyperledger Fabric, le framework DLT de référence hébergé par la Fondation Linux. La 1ère version de
-                Substra a été développée par Owkin et publiée sous licence Apache 2.0 pour ouvrir les collaborations
+                Labelia a été développée par Owkin et publiée sous licence Apache 2.0 pour ouvrir les collaborations
                 open source.</p>
         </div>
         <div class="column">
