--- a/platform_code/home/templates/home/account/acc_activate_email.html
+++ b/platform_code/home/templates/home/account/acc_activate_email.html
@@ -1,10 +1,10 @@
 {% load i18n %}{% load static %}{% autoescape off %}
-{% trans "Thank you for creating a Substra account!" %}
+{% trans "Thank you for creating a Labelia account!" %}
 {% trans "To continue the process, please verify your email by clicking on the link below," %}
 {{ protocol }}://{{ domain }}{% url 'home:activate' uidb64=uid token=token %}
 
 {% trans "If clicking the link above doesn't work, please copy and paste the URL in a new browser window instead." %}
 
 {% trans "Kind regards," %}
-{% trans "The Substra Foundation Team" %}
+{% trans "The Labelia Labs Team" %}
 {% endautoescape %}
