--- a/platform_code/home/templates/home/faq.html
+++ b/platform_code/home/templates/home/faq.html
@@ -5,17 +5,17 @@
 
 {% block content %}
 <head>
-    <title>Substra assessment: FAQ</title>
+    <title>Labelia assessment: FAQ</title>
     <meta name="description"
           content="{% blocktrans trimmed %}
-           Find the answers to your questions about the substra assessment in this page.
+           Find the answers to your questions about the labelia assessment in this page.
           {% endblocktrans %}"
     />
 </head>
 
 <div class="static-wrapper">
     <h1 class="h1-margin-no-breadcrumbs">{% trans "FAQ" %}</h1>
-    <img alt="{% trans 'Find the answers to your questions about the Substra assessment.' %}"
+    <img alt="{% trans 'Find the answers to your questions about the Labelia assessment.' %}"
          class="img-fluid d-block mx-auto image-faq"
          src="{% static 'image/Illustration_10.png' %}"
     />
@@ -25,10 +25,10 @@
         <li class="li-with-disc margin-10"><p>
             {% blocktrans trimmed %}
             It is the result of a participatory work initiated in mid-2019
-            and carried out by the Substra Foundation association. This approach is described in this
+            and carried out by the Labelia Labs association. This approach is described in this
             {% endblocktrans %}
-            <a href="https://www.substra.ai/fr/blog/evaluation-data-science-responsable"
-               title="https://www.substra.ai/fr/blog/evaluation-data-science-responsable">{%trans "blog article"%}
+            <a href="https://www.labelia.org/fr/blog/evaluation-data-science-responsable"
+               title="https://www.labelia.org/fr/blog/evaluation-data-science-responsable">{%trans "blog article"%}
             </a>
             {% trans " that we recommend!" %}</p>
             <p>{% blocktrans trimmed %}
@@ -208,7 +208,7 @@
         </li>
     </ul>
 
-    <h3 class="about-subtitle">{% trans "About Substra Foundation" %}</h3>
+    <h3 class="about-subtitle">{% trans "About Labelia Labs" %}</h3>
 
     <p>{% blocktrans trimmed %}
         Since 2019, Labelia Labs has been bringing together Data Science practitioners through a
@@ -220,7 +220,7 @@
     </p>
     <p>{% blocktrans trimmed %}
         Thanks to this community, a digital commons has been created:
-        <a href="https://github.com/SubstraFoundation/referentiel-evaluation-dsrc/blob/master/referentiel_evaluation.md"
+        <a href="https://github.com/LabeliaLabs/referentiel-evaluation-dsrc/blob/master/referentiel_evaluation.md"
            target="_blank">the Responsible and Trustworthy Data Science Assessment
         </a>.
         Evolving biannually and overseen by an independent committee, this commons
