--- a/platform_code/home/templates/home/legal-notices.html
+++ b/platform_code/home/templates/home/legal-notices.html
@@ -5,10 +5,10 @@
 
 {% block content %}
 <head>
-    <title>{% trans 'Substra assessment: legal notices' %}</title>
+    <title>{% trans 'Labelia assessment: legal notices' %}</title>
     <meta name="description"
           content="{% blocktrans trimmed %}
-           Legal information about the site www.assessment.substra.ai
+           Legal information about the site www.assessment.labelia.org
           {% endblocktrans %}"
     />
 </head>
@@ -17,41 +17,41 @@
     <h1 class="h1-margin-no-breadcrumbs">Informations légales</h1>
     <h3 class="about-subtitle">1. Présentation du site.</h3>
     <p>En vertu de l'article 6 de la loi n° 2004-575 du 21 juin 2004 pour la confiance dans l'économie numérique, il est
-        précisé aux utilisateurs du site <a href="http://www.assessment.substra.ai/">www.assessment.substra.ai</a>
+        précisé aux utilisateurs du site <a href="http://www.assessment.labelia.org/">www.assessment.labelia.org</a>
         l'identité des différents intervenants dans le cadre de sa réalisation et de son suivi :</p>
-    <p><strong>Propriétaire</strong> : Substra Foundation – Association loi 1901 - SIRET 83979317100027 – 49 rue de
+    <p><strong>Propriétaire</strong> : Labelia Labs (ex Substra Foundation) – Association loi 1901 - SIRET 83979317100027 – 49 rue de
         Chateaulin - 44000 - Nantes<br/>
-        <strong>Créateur</strong> : <a href="www.substra.org">Substra Foundation</a><br/>
-        <strong>Responsable publication</strong> : Clément Mayer – hello.assessment@substra.org<br/>
+        <strong>Créateur</strong> : <a href="www.labelia.org">Labelia Labs</a><br/>
+        <strong>Responsable publication</strong> : Clément Mayer – hello.assessment@labelia.org<br/>
         Le responsable publication est une personne physique ou une personne morale.<br/>
-        <strong>Webmaster</strong> : Clément Mayer – hello.assessment@substra.org<br/>
+        <strong>Webmaster</strong> : Clément Mayer – hello.assessment@labelia.org<br/>
         <strong>Hébergeur</strong> : OVH – 2 rue Kellermann - 59100 Roubaix - France<br/>
 
     <h3 class="about-subtitle">2. Conditions générales d’utilisation du site et des services proposés.</h3>
-    <p>L’utilisation du site <a href="http://www.assessment.substra.ai/">www.assessment.substra.ai</a> implique
+    <p>L’utilisation du site <a href="http://www.assessment.labelia.org/">www.assessment.labelia.org</a> implique
         l’acceptation pleine et entière des conditions générales d’utilisation ci-après décrites. Ces conditions
         d’utilisation sont susceptibles d’être modifiées ou complétées à tout moment, les utilisateurs du site <a
-                href="http://www.assessment.substra.ai/">www.assessment.substra.ai</a> sont donc invités à les consulter
+                href="http://www.assessment.labelia.org/">www.assessment.labelia.org</a> sont donc invités à les consulter
         de manière régulière.</p>
     <p>Ce site est normalement accessible à tout moment aux utilisateurs. Une interruption pour raison de maintenance
-        technique peut être toutefois décidée par Substra Foundation, qui s’efforcera alors de communiquer préalablement
+        technique peut être toutefois décidée par Labelia Labs, qui s’efforcera alors de communiquer préalablement
         aux utilisateurs les dates et heures de l’intervention.</p>
-    <p>Le site <a href="http://www.assessment.substra.ai/">www.assessment.substra.ai</a> est mis à jour régulièrement
+    <p>Le site <a href="http://www.assessment.labelia.org/">www.assessment.labelia.org</a> est mis à jour régulièrement
         par Clément Mayer. De la même façon, les mentions légales peuvent être modifiées à tout moment : elles
         s’imposent néanmoins à l’utilisateur qui est invité à s’y référer le plus souvent possible afin d’en prendre
         connaissance.</p>
 
     <h3 class="about-subtitle">3. Description des services fournis.</h3>
-    <p>Le site <a href="http://www.assessment.substra.ai/">www.assessment.substra.ai</a> a pour objet de fournir une
+    <p>Le site <a href="http://www.assessment.labelia.org/">www.assessment.labelia.org</a> a pour objet de fournir une
         information concernant l’ensemble des activités de la société.</p>
-    <p>Substra Foundation s’efforce de fournir sur le site <a href="http://www.assessment.substra.ai/">www.assessment.substra.ai</a>
+    <p>Labelia Labs s’efforce de fournir sur le site <a href="http://www.assessment.labelia.org/">www.assessment.labelia.org</a>
         des informations aussi précises que possible. Toutefois, il ne pourra être tenue responsable des omissions, des
         inexactitudes et des carences dans la mise à jour, qu’elles soient de son fait ou du fait des tiers partenaires
         qui lui fournissent ces informations.</p>
     <p>Tous les informations indiquées sur le site <a
-            href="http://www.assessment.substra.ai/">www.assessment.substra.ai</a> sont données à titre indicatif, et
+            href="http://www.assessment.labelia.org/">www.assessment.labelia.org</a> sont données à titre indicatif, et
         sont susceptibles d’évoluer. Par ailleurs, les renseignements figurant sur le site <a
-                href="http://www.assessment.substra.ai/">www.assessment.substra.ai</a> ne sont pas exhaustifs. Ils sont
+                href="http://www.assessment.labelia.org/">www.assessment.labelia.org</a> ne sont pas exhaustifs. Ils sont
         donnés sous réserve de modifications ayant été apportées depuis leur mise en ligne.</p>
 
     <h3 class="about-subtitle">4. Limitations contractuelles sur les données techniques.</h3>
@@ -61,28 +61,28 @@
         avec un navigateur de dernière génération mis-à-jour</p>
 
     <h3 class="about-subtitle">5. Propriété intellectuelle et contrefaçons.</h3>
-    <p>Substra Foundation est propriétaire des droits de propriété intellectuelle ou détient les droits d’usage sur tous
+    <p>Labelia Labs est propriétaire des droits de propriété intellectuelle ou détient les droits d’usage sur tous
         les éléments accessibles sur le site, notamment les textes, images, graphismes, logo, icônes, sons,
         logiciels.</p>
     <p>Toute reproduction, représentation, modification, publication, adaptation de tout ou partie des éléments du site,
-        quel que soit le moyen ou le procédé utilisé, est interdite, sauf autorisation écrite préalable de : Substra
-        Foundation.</p>
+        quel que soit le moyen ou le procédé utilisé, est interdite, sauf autorisation écrite préalable de :
+        Labelia Labs.</p>
     <p>Toute exploitation non autorisée du site ou de l’un quelconque des éléments qu’il contient sera considérée comme
         constitutive d’une contrefaçon et poursuivie conformément aux dispositions des articles L.335-2 et suivants du
         Code de Propriété Intellectuelle.</p>
 
     <h3 class="about-subtitle">6. Limitations de responsabilité.</h3>
-    <p>Substra Foundation ne pourra être tenue responsable des dommages directs et indirects causés au matériel de
-        l’utilisateur, lors de l’accès au site www.assessment.substra.ai, et résultant soit de l’utilisation d’un
+    <p>Labelia Labs (ex Substra Foundation) ne pourra être tenue responsable des dommages directs et indirects causés au matériel de
+        l’utilisateur, lors de l’accès au site www.assessment.labelia.org, et résultant soit de l’utilisation d’un
         matériel ne répondant pas aux spécifications indiquées au point 4, soit de l’apparition d’un bug ou d’une
         incompatibilité.</p>
-    <p>Substra Foundation ne pourra également être tenue responsable des dommages indirects (tels par exemple qu’une
+    <p>Labelia Labs (ex Substra Foundation) ne pourra également être tenue responsable des dommages indirects (tels par exemple qu’une
         perte de marché ou perte d’une chance) consécutifs à l’utilisation du site <a
-                href="http://www.assessment.substra.ai/">www.assessment.substra.ai</a>.</p>
+                href="http://www.assessment.labelia.org/">www.assessment.labelia.org</a>.</p>
     <p>Des espaces interactifs (possibilité de poser des questions dans l’espace contact) sont à la disposition des
-        utilisateurs. Substra Foundation se réserve le droit de supprimer, sans mise en demeure préalable, tout contenu
+        utilisateurs. Labelia Labs (ex Substra Foundation) se réserve le droit de supprimer, sans mise en demeure préalable, tout contenu
         déposé dans cet espace qui contreviendrait à la législation applicable en France, en particulier aux
-        dispositions relatives à la protection des données. Le cas échéant, Substra Foundation se réserve également la
+        dispositions relatives à la protection des données. Le cas échéant, Labelia Labs (ex Substra Foundation) se réserve également la
         possibilité de mettre en cause la responsabilité civile et/ou pénale de l’utilisateur, notamment en cas de
         message à caractère raciste, injurieux, diffamant, ou pornographique, quel que soit le support utilisé (texte,
         photographie…).</p>
@@ -90,35 +90,35 @@
     <h3 class="about-subtitle">7. Gestion des données personnelles.</h3>
     <p>En France, les données personnelles sont notamment protégées par la loi n° 78-87 du 6 janvier 1978, la loi n°
         2004-801 du 6 août 2004, l'article L. 226-13 du Code pénal et la Directive Européenne du 24 octobre 1995.</p>
-    <p>A l'occasion de l'utilisation du site <a href="http://www.assessment.substra.ai/">www.assessment.substra.ai</a>,
+    <p>A l'occasion de l'utilisation du site <a href="http://www.assessment.labelia.org/">www.assessment.labelia.org</a>,
         peuvent êtres recueillies : l'URL des liens par l'intermédiaire desquels l'utilisateur a accédé au site <a
-                href="http://www.assessment.substra.ai/">www.assessment.substra.ai</a>, le fournisseur d'accès de
+                href="http://www.assessment.labelia.org/">www.assessment.labelia.org</a>, le fournisseur d'accès de
         l'utilisateur, l'adresse de protocole Internet (IP) de l'utilisateur.</p>
-    <p> En tout état de cause Substra Foundation ne collecte des informations personnelles relatives à l'utilisateur que
-        pour le besoin de certains services proposés par le site <a href="http://www.assessment.substra.ai/">www.assessment.substra.ai</a>.
+    <p> En tout état de cause Labelia Labs (ex Substra Foundation) ne collecte des informations personnelles relatives à l'utilisateur que
+        pour le besoin de certains services proposés par le site <a href="http://www.assessment.labelia.org/">www.assessment.labelia.org</a>.
         L'utilisateur fournit ces informations en toute connaissance de cause, notamment lorsqu'il procède par lui-même
-        à leur saisie. Il est alors précisé à l'utilisateur du site <a href="http://www.assessment.substra.ai/">www.assessment.substra.ai</a>
+        à leur saisie. Il est alors précisé à l'utilisateur du site <a href="http://www.assessment.labelia.org/">www.assessment.labelia.org</a>
         l’obligation ou non de fournir ces informations.</p>
     <p>Conformément aux dispositions des articles 38 et suivants de la loi 78-17 du 6 janvier 1978 relative à
         l’informatique, aux fichiers et aux libertés, tout utilisateur dispose d’un droit d’accès, de rectification et
         d’opposition aux données personnelles le concernant, en effectuant sa demande écrite et signée, accompagnée
         d’une copie du titre d’identité avec signature du titulaire de la pièce, en précisant l’adresse à laquelle la
         réponse doit être envoyée.</p>
-    <p>Aucune information personnelle de l'utilisateur du site <a href="http://www.assessment.substra.ai/">www.assessment.substra.ai</a>
+    <p>Aucune information personnelle de l'utilisateur du site <a href="http://www.assessment.labelia.org/">www.assessment.labelia.org</a>
         n'est publiée à l'insu de l'utilisateur, échangée, transférée, cédée ou vendue sur un support quelconque à des
-        tiers. Seule l'hypothèse du rachat de Substra Foundation et de ses droits permettrait la transmission des dites
+        tiers. Seule l'hypothèse du rachat de Labelia Labs (ex Substra Foundation) et de ses droits permettrait la transmission des dites
         informations à l'éventuel acquéreur qui serait à son tour tenu de la même obligation de conservation et de
-        modification des données vis à vis de l'utilisateur du site <a href="http://www.assessment.substra.ai/">www.assessment.substra.ai</a>.
+        modification des données vis à vis de l'utilisateur du site <a href="http://www.assessment.labelia.org/">www.assessment.labelia.org</a>.
     </p>
     <p>Les bases de données sont protégées par les dispositions de la loi du 1er juillet 1998 transposant la directive
         96/9 du 11 mars 1996 relative à la protection juridique des bases de données.</p>
 
     <h3 class="about-subtitle">8. Liens hypertextes et cookies.</h3>
-    <p>Le site <a href="http://www.assessment.substra.ai/">www.assessment.substra.ai</a> contient un certain nombre de
-        liens hypertextes vers d’autres sites, mis en place avec l’autorisation de Substra Foundation. Cependant,
-        Substra Foundation n’a pas la possibilité de vérifier le contenu des sites ainsi visités, et n’assumera en
+    <p>Le site <a href="http://www.assessment.labelia.org/">www.assessment.labelia.org</a> contient un certain nombre de
+        liens hypertextes vers d’autres sites, mis en place avec l’autorisation de Labelia Labs. Cependant,
+        Labelia Labs n’a pas la possibilité de vérifier le contenu des sites ainsi visités, et n’assumera en
         conséquence aucune responsabilité de ce fait.</p>
-    <p>La navigation sur le site <a href="http://www.assessment.substra.ai/">www.assessment.substra.ai</a> est
+    <p>La navigation sur le site <a href="http://www.assessment.labelia.org/">www.assessment.labelia.org</a> est
         susceptible de provoquer l’installation de cookie(s) sur l’ordinateur de l’utilisateur. Un cookie est un fichier
         de petite taille, qui ne permet pas l’identification de l’utilisateur, mais qui enregistre des informations
         relatives à la navigation d’un ordinateur sur un site. Les données ainsi obtenues visent à faciliter la
@@ -140,7 +140,7 @@
         cookies.</p>
 
     <h3 class="about-subtitle">9. Droit applicable et attribution de juridiction.</h3>
-    <p>Tout litige en relation avec l’utilisation du site <a href="http://www.assessment.substra.ai/">www.assessment.substra.ai</a>
+    <p>Tout litige en relation avec l’utilisation du site <a href="http://www.assessment.labelia.org/">www.assessment.labelia.org</a>
         est soumis au droit français. Il est fait attribution exclusive de juridiction aux tribunaux compétents de
         Paris.</p>
 
