--- a/platform_code/home/templates/home/login.html
+++ b/platform_code/home/templates/home/login.html
@@ -5,10 +5,10 @@
 
 {% block content %}
 <head>
-    <title>{% trans 'Substra assessment: Connection' %}</title>
+    <title>{% trans 'Labelia assessment: Connection' %}</title>
     <meta name="description"
           content="{% blocktrans trimmed %}
-           Connect to your substra account to create new evaluations, browse technical resources, consult
+           Connect to your labelia account to create new evaluations, browse technical resources, consult
            the score of your completed evaluations, and more.
           {% endblocktrans %}"
     />
