--- a/platform_code/home/templates/home/registration/password_reset_email.html
+++ b/platform_code/home/templates/home/registration/password_reset_email.html
@@ -1,12 +1,12 @@
 {% load i18n %}{% load static %}{% autoescape off %}
 {% trans "Dear" %} {{ user.get_full_name }},
 
-{% trans "We received a request to reset the password for your account on Substra Foundation for this email address. To initiate the password reset process for your account, click the link below." %}
+{% trans "We received a request to reset the password for your account on Labelia Labs for this email address. To initiate the password reset process for your account, click the link below." %}
 
 {{ protocol }}://{{ domain }}{% url 'home:password_reset_confirm' uidb64=uid token=token %}
 
 {% trans "If clicking the link above doesn't work, please copy and paste the URL in a new browser window instead." %}
 
 {% trans "Kind regards," %}
-{% trans "The Substra Foundation Team" %}
+{% trans "The Labelia Labs Team" %}
 {% endautoescape %}
