--- a/platform_code/home/templates/home/release-notes.html
+++ b/platform_code/home/templates/home/release-notes.html
@@ -5,7 +5,7 @@
 {% load markdownify %}
 
 {% block content %}
-<title>Substra Assessment: release notes</title>
+<title>Labelia Assessment: release notes</title>
 
 <div class="static-wrapper">
     <h1 class="h1-margin-no-breadcrumbs">{% trans "Release Notes" %}</h1>
