--- a/platform_code/home/templates/home/signup.html
+++ b/platform_code/home/templates/home/signup.html
@@ -4,10 +4,10 @@
 
 {% block content %}
 <head>
-    <title>{% trans 'Substra assessment: Signup' %}</title>
+    <title>{% trans 'Labelia assessment: Signup' %}</title>
     <meta name="description"
           content="{% blocktrans trimmed %}
-           The Substra assessment is the result of a participatory work carried out by the Substra Foundation
+           The Labelia assessment is the result of a participatory work carried out by the Labelia Labs
            association. Create an account to evaluate your organisation on responsible and trustworthy data science
            practices.
           {% endblocktrans %}"
