--- a/platform_code/templates/admin/base_site.html
+++ b/platform_code/templates/admin/base_site.html
@@ -11,7 +11,7 @@
 {% block branding %}
 <h1 id="site-name">
 
-    <img src="{% static 'image/favicon.png' %}" height="40px" />
+    <img src="{% static 'image/Icone_Labelia_RVB.svg' %}" height="40px" />
     <a href="{% url 'admin:index' %}">
         Admin panel
     </a>
