--- a/platform_code/templates/errors.html
+++ b/platform_code/templates/errors.html
@@ -25,7 +25,7 @@
 <body>
     <div class="center">
         <div id="image">
-            <img alt="logo substra" src="{% static 'image/Substra_Logo_couleur_RVB.png' %}" title="logo substra">
+            <img alt="logo labelia" src="{% static 'image/Logo_Labelia_horizontal_BL_RVB.png' %}" title="logo labelia">
         </div>
         <div id="text">
             <h1>{{title}}</h1>
