--- a/platform_code/templates/footer.html
+++ b/platform_code/templates/footer.html
@@ -61,11 +61,11 @@
     <a class="link-with-border" href="{% url 'home:legal-notices' %}">{% trans "Legal notices" %}</a>
 </div>
 <div class="col-md-3 col-md-3-footer">
-    <a class="fa fa-icon-footer fa-twitter" href="https://twitter.com/Substra_org" target="_blank"></a>
-    <a class="fa fa-icon-footer fa-linkedin" href="https://www.linkedin.com/company/substra/"
+    <a class="fa fa-icon-footer fa-twitter" href="https://twitter.com/LabeliaLabs" target="_blank"></a>
+    <a class="fa fa-icon-footer fa-linkedin" href="https://www.linkedin.com/company/labelialabs/"
         target="_blank"></a>
-    <a class="fa fa-icon-footer fa-github" href="https://github.com/SubstraFoundation" target="_blank"></a>
-    <a class="fa fa-icon-footer fa-envelope" href="mailto:hello.assessment@substra.org" target="_blank"></a>
+    <a class="fa fa-icon-footer fa-github" href="https://github.com/LabeliaLabs" target="_blank"></a>
+    <a class="fa fa-icon-footer fa-envelope" href="mailto:hello.assessment@labelia.org" target="_blank"></a>
     <a class="fa fa-icon-footer fa-meetup" href="https://www.meetup.com/data-science-responsable-et-de-confiance/" target="_blank"></a>
 </div>
 </div>
