--- a/platform_code/home/templates/home/registration/password_reset_form.html
+++ b/platform_code/home/templates/home/registration/password_reset_form.html
@@ -4,10 +4,10 @@
 {% block content %}
 
 <head>
-    <title>{% trans 'Substra assessment: Forgotten password' %}</title>
+    <title>{% trans 'Labelia assessment: Forgotten password' %}</title>
     <meta name="description"
           content="{% blocktrans trimmed %}
-           Reset the password of your substra account.
+           Reset the password of your labelia account.
           {% endblocktrans %}"
     />
 </head>
