--- a/platform_code/home/templates/home/registration/password_reset_subject.html
+++ b/platform_code/home/templates/home/registration/password_reset_subject.html
@@ -1,3 +1,3 @@
 {% load i18n %}{% autoescape off %}
-{% trans "Reset password - Substra assessment" %}
+{% trans "Reset password - Labelia assessment" %}
 {% endautoescape %}
